--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pasar Kita</title>
-    <link rel="icon" href="..\img\logo.png" type="image/png" />
+    <link rel="icon" href="img\logo.png" type="image/png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
         <div class="logo">
-          <img src="..\img\logo.png" alt="Logo Pasar Kita" />
+          <img src="img\logo.png" alt="Logo Pasar Kita" />
         </div>
         <ul>
           <li><a href="index.html" class="active">Tentang Kita</a></li>
@@ -32,7 +32,7 @@
           <p>"Pasar Kita bertujuan mendigitalisasi pasar tradisional, memudahkan akses bagi semua orang, dan memperkuat keterhubungan komunitas melalui teknologi."</p>
         </div>
         <div class="intro-image">
-          <img src="..\img\pasar.png" alt="Pasar" />
+          <img src="img\pasar.png" alt="Pasar" />
         </div>
       </section>
 
