--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pasar Kita</title>
-    <link rel="icon" href="img\logo.png" type="image/png" />
+    <link rel="icon" href="img/logo.png" type="image/png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -12,9 +12,9 @@
     <header>
       <nav>
         <div class="logo">
-          <img src="img\logo.png" alt="Logo Pasar Kita" />
+          <img src="img/logo.png" alt="Logo Pasar Kita" />
         </div>
-        <ul>
+        <ul class="nav-links">
           <li><a href="index.html" class="active">Tentang Kita</a></li>
           <li><a href="mitra.html">Mitra</a></li>
           <li><a href="cek-harga.html">Cek Harga</a></li>
@@ -22,6 +22,9 @@
           <li><a href="berita-terkini.html">Berita Terkini</a></li>
           <li><a href="masuk.html" class="masuk-button">Masuk</a></li>
         </ul>
+        <button class="nav-toggle" aria-label="toggle navigation">
+          &#9776;
+        </button>
       </nav>
     </header>
 
@@ -32,7 +35,7 @@
           <p>"Pasar Kita bertujuan mendigitalisasi pasar tradisional, memudahkan akses bagi semua orang, dan memperkuat keterhubungan komunitas melalui teknologi."</p>
         </div>
         <div class="intro-image">
-          <img src="img\pasar.png" alt="Pasar" />
+          <img src="img/pasar.png" alt="Pasar" />
         </div>
       </section>
 
@@ -56,5 +59,15 @@
     <footer>
       <p>Pasar Kita © 2024</p>
     </footer>
+
+    <script>
+      // Script for mobile menu toggle
+      const navToggle = document.querySelector(".nav-toggle");
+      const navLinks = document.querySelector(".nav-links");
+
+      navToggle.addEventListener("click", () => {
+        navLinks.classList.toggle("nav-open");
+      });
+    </script>
   </body>
 </html>
