feat: dropdown for mitra

--- a/cetak-kartu.html
+++ b/cetak-kartu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pasar Kita</title>
-    <link rel="icon" href="img/logo.png" type="image/png" />
+    <link rel="icon" href="img\logo.png" type="image/png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -15,13 +15,13 @@
           <img src="img/logo.png" alt="Logo Pasar Kita" />
         </div>
         <ul class="nav-links">
-          <li><a href="index.html" class="active">Tentang Kita</a></li>
+          <li><a href="index.html">Tentang Kita</a></li>
           <li class="dropdown">
             <a href="#" class="dropbtn">Mitra</a>
             <div class="dropdown-content">
               <a href="data-mitra.html">Data Mitra</a>
               <a href="lihat-data.html">Lihat Data</a>
-              <a href="cetak-kartu.html">Cetak Kartu</a>
+              <a href="cetak-kartu.html" class="active">Cetak Kartu</a>
             </div>
           </li>
           <li><a href="cek-harga.html">Cek Harga</a></li>
@@ -34,37 +34,12 @@
     </header>
 
     <main>
-      <section class="intro">
-        <div class="intro-text">
-          <h2>Pasar Kita: Milik Saya, Kamu, Dia, dan Semua.</h2>
-          <p>"Pasar Kita bertujuan mendigitalisasi pasar tradisional, memudahkan akses bagi semua orang, dan memperkuat keterhubungan komunitas melalui teknologi."</p>
-        </div>
-        <div class="intro-image">
-          <img src="img/pasar.png" alt="Pasar" />
-        </div>
-      </section>
-
-      <section class="visi-misi">
-        <div class="visi">
-          <h3>Visi</h3>
-          <p>"Menjadi platform digital terdepan yang memberdayakan pasar tradisional, menciptakan akses yang mudah dan merata bagi seluruh masyarakat."</p>
-        </div>
-        <div class="misi">
-          <h3>Misi</h3>
-          <ul>
-            <li>Menghubungkan penjual dan pembeli.</li>
-            <li>Meningkatkan inklusi digital.</li>
-            <li>Mendukung ekonomi lokal.</li>
-            <li>Membangun komunitas yang kuat.</li>
-          </ul>
-        </div>
-      </section>
+      <h1>Konten diisi Pak Dede Karyana untuk Cetak Kartu</h1>
     </main>
 
     <footer>
       <p>Pasar Kita © 2024</p>
     </footer>
-
     <script>
       // Script for mobile menu toggle
       const navToggle = document.querySelector(".nav-toggle");
