--- a/daftar.html
+++ b/daftar.html
@@ -29,7 +29,14 @@
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Tentang Kita</a></li>
-          <li><a href="mitra.html">Mitra</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropbtn">Mitra</a>
+            <div class="dropdown-content">
+              <a href="data-mitra.html">Data Mitra</a>
+              <a href="lihat-data.html">Lihat Data</a>
+              <a href="cetak-kartu.html">Cetak Kartu</a>
+            </div>
+          </li>
           <li><a href="cek-harga.html">Cek Harga</a></li>
           <li><a href="visualisasi-data.html">Visualisasi Data</a></li>
           <li><a href="berita-terkini.html">Berita Terkini</a></li>
